# spoolctl

./: .gitignore  LICENSE  README.md  pyproject.toml
.beads/: config.yaml  issues.jsonl
.github/workflows/: ci.yml  publish.yml
scripts/: build_single_file.py
spoolctl/: __init__.py  __main__.py  cli.py  models.py  schemas.py  store.py  worker.py
tests/: test_add.py  test_brief.py  test_cancel.py  test_capabilities.py  test_claim_record.py  test_cli_framework.py  test_concurrency.py  test_contract.py  test_events.py  test_execute.py  test_list.py  test_migration.py  test_output.py  test_prune.py  test_reaper.py  test_retry.py  test_scaffold.py  test_schema_cli.py  test_schema_conformance.py  test_show.py  test_status.py  test_store.py  test_wait.py  test_work.py
tests/golden/: brief.txt  capabilities.json  envelope-add.json  envelope-brief.json  envelope-cancel-queued.json  envelope-events-empty.json  envelope-list-empty.json  envelope-output-no-attempts.json  envelope-prune-empty.json  envelope-retry-not-found.json  envelope-schema.json  envelope-show-not-found.json  envelope-status-empty.json  envelope-wait-mixed.json  envelope-work-drain-empty.json  envelope-work-once-empty.json  schema.json
